# real-time-transit-delay-detection

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.sh  start.sh  stop.sh
config/: settings.py
docs/: analytics_spec.md
flink/: Dockerfile
grafana/provisioning/dashboards/: dashboards.yml
grafana/provisioning/dashboards/json/: anomaly-detection.json  delay-analytics.json  fleet-overview.json  gtfs-delay-predictions.json
grafana/provisioning/datasources/: postgres.yml
scripts/: demo_reset.ps1  demo_reset.sh  download_flink_jars.ps1  download_flink_jars.sh  migrate.py  seed_synthetic_demo_history.sql  submit_flink_job.ps1  submit_flink_job.sh  train_delay_model.py
services/flink_jobs/: __init__.py  processing_job.py
services/gtfs_ingestion/: loader.py
services/gtfs_matching/: __init__.py  matcher.py
services/live_producer/: producer.py
services/model_training/: __init__.py  feature_engineer.py
services/predictor/: __init__.py  predictor.py
services/trip_planner/: __init__.py  app.py
sql/: init.sql
sql/migrations/: 001_gtfs_tables.sql  002_analytics_tables.sql  003_grafana_views.sql  004_continuous_aggregates.sql  005_prediction_tables.sql  006_prediction_views.sql  007_gtfs_matching_runtime.sql  008_trip_planner_indexes.sql
tests/: test_feature_engineer.py  test_gtfs_matching.py  test_predictor.py  test_settings.py
